--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_svg: ^2.1.0
+  equatable: ^2.0.7
+  go_router: ^15.1.2
+  flutter_secure_storage: ^9.2.4
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +66,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icons/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -87,3 +95,45 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+  fonts:
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/inter/Inter_28pt-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/inter/Inter_28pt-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/inter/Inter_28pt-MediumItalic.ttf
+          style: italic
+        - asset: assets/fonts/inter/Inter_28pt-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/inter/Inter_28pt-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/inter/Inter_28pt-ExtraBold.ttf
+          weight: 800
+
+    - family: PPNeueMontreal
+      fonts:
+        - asset: assets/fonts/pp_neue_montreal/ppneuemontreal-thin.ttf
+          weight: 300
+        - asset: assets/fonts/pp_neue_montreal/ppneuemontreal-book.ttf
+          weight: 400
+        - asset: assets/fonts/pp_neue_montreal/ppneuemontreal-medium.ttf
+          weight: 500
+        - asset: assets/fonts/pp_neue_montreal/ppneuemontreal-italic.ttf
+          style: italic
+        - asset: assets/fonts/pp_neue_montreal/ppneuemontreal-semibolditalic.ttf
+          weight: 600
+          style: italic
+        - asset: assets/fonts/pp_neue_montreal/ppneuemontreal-bold.ttf
+          weight: 700
+
+    - family: SharpGrotesk
+      fonts:
+        - asset: assets/fonts/sharp_grotesk/SharpGrotesk-Thin25.ttf
+          weight: 300
+        - asset: assets/fonts/sharp_grotesk/SharpGrotesk-Book25.ttf
+          weight: 400
+        - asset: assets/fonts/sharp_grotesk/SharpGrotesk-Medium25.ttf
+          weight: 500
+        - asset: assets/fonts/sharp_grotesk/SharpGrotesk-SemiBold25.ttf
+          weight: 600
