--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   go_router: ^15.1.2
   flutter_secure_storage: ^9.2.4
   get_it: ^8.0.3
+  smooth_page_indicator: ^1.2.1
+  country_picker: ^2.0.27
+  flag: ^7.0.0
+  flutter_keyboard_visibility: ^6.0.0
+  mask_text_input_formatter: ^2.9.0
+  flutter_multi_formatter: ^2.13.7
 
 dev_dependencies:
   flutter_test:
